# calendar

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.production.yml  docker-compose.yaml  docker-compose.yml  dot.env  storage-setup.sh
api/v2/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrate  dbconfig.yml  docker-entrypoint.sh  go.mod  go.sum  litestream.yml  main.go  openapi.md  openapi.yaml
api/v2/db/: db.go
api/v2/db/migration/: 20241120215722-calendar_details.sql  20241120220340-calendar_events.sql
api/v2/handler/: admin.go  public.go  util.go
api/v2/model/: calendar_detail.go  calendar_event.go
api/v2/src/: lib.rs  main.rs
api/v2/src/domain/: calendar_detail.rs  calendar_event.rs
api/v2/src/domain/entities/: calendar_detail.rs  calendar_event.rs
api/v2/src/infra/: mod.rs
api/v2/src/infra/adapters/: admin_routes.rs  mod.rs  public_routes.rs  web.rs
api/v2/src/infra/exporter/: ics.rs  mod.rs
api/v2/src/infra/mappers/: calendar_detail_mapper.rs  calendar_event_mapper.rs  mod.rs
api/v2/src/infra/repository/: calendar.rs
api/v2/src/infra/repository/db/: calendar.rs  calendar_detail.rs  calendar_event.rs  mod.rs
api/v2/src/infra/schema/: calendar_detail.rs  calendar_event.rs
api/v2/src/use_cases/: calendar_use_case.rs  interfaces.rs  mod.rs
api/v2/tests/: calendar_detail.rs  calendar_event.rs
api/v2/tmp/: 4be372f5-58a2-4eae-add1-061ab3b10975-fanza-event.ics  50f93424-fc4a-41b3-848e-09ddeb55e723-fanza-event.ics  98c3db7b-3db2-485e-99ce-59e39124b264-fanza-event.ics
api/v2/util/: util.go
(+77 files in other folders)
