[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = "0.4.39"
icalendar = "0.16.10"
actix-web = "4"
serde_json = "1.0"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]